Closed Bug 1007790 Opened 11 years ago Closed 11 years ago

onerror attribute event handler on <body> should be compiled with the right set of arguments

Categories

(Core :: DOM: Events, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file)

It's missing "colno" and "error".
Summary: onerror attribute event handler should be compiled with the right set of arguments → onerror attribute event handler on <body> should be compiled with the right set of arguments
Comment on attachment 8419582 [details] [diff] [review] When compiling the <body>'s onerror handler, do give it all five args Uh, this is error prone :/ I guess we don't have any easy way to get param names from webidl >+ nsCOMPtr<nsPIDOMWindow> win = do_QueryInterface(mTarget); > uint32_t argCount; > const char **argNames; > nsContentUtils::GetEventArgNames(aElement->GetNameSpaceID(), >- typeAtom, >+ typeAtom, win, Compilers don't complain about passing win? !!win would work too.
Attachment #8419582 - Flags: review?(bugs) → review+
> Compilers don't complain about passing win? At least clang didn't.
Flags: in-testsuite+
Whiteboard: [need review]
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: