Bug 1007790.  When compiling the <body>'s onerror handler, do give it all five args.  r=smaug